// Code scaffolded by goctl. Safe to edit.
// goctl 1.9.2

package logic

import (
	"context"
	"strconv"
	"time"

	"serve-go/internal/grpc"
	"serve-go/internal/svc"
	"serve-go/internal/types"

	"github.com/zeromicro/go-zero/core/logx"
)

type SendMessageLogic struct {
	logx.Logger
	ctx    context.Context
	svcCtx *svc.ServiceContext
}

func NewSendMessageLogic(ctx context.Context, svcCtx *svc.ServiceContext) *SendMessageLogic {
	return &SendMessageLogic{
		Logger: logx.WithContext(ctx),
		ctx:    ctx,
		svcCtx: svcCtx,
	}
}

func (l *SendMessageLogic) SendMessage(req *types.SendMessageRequest) (resp *types.SendMessageResponse, err error) {
	// å°†å­—ç¬¦ä¸² RoleId è½¬æ¢ä¸º int
	roleId, err := strconv.Atoi(req.RoleId)
	if err != nil {
		logx.Errorf("Invalid role_id: %v", err)
		return nil, err
	}

	// è°ƒç”¨Python gRPCæœåŠ¡è·å–å›å¤
	responseContent, err := l.callPythonGrpcService(roleId, req.Content)
	if err != nil {
		return nil, err
	}

	message := types.Message{
		Id:        int(time.Now().Unix()),
		RoleId:    roleId,
		Content:   responseContent,
		Timestamp: time.Now().Format("2006-01-02 15:04:05"),
	}

	return &types.SendMessageResponse{
		Message: message,
	}, nil
}

func (l *SendMessageLogic) callPythonGrpcService(roleId int, userMessage string) (string, error) {
	// æ£€æŸ¥gRPCå®¢æˆ·ç«¯æ˜¯å¦å¯ç”¨
	if l.svcCtx.GrpcClient == nil {
		logx.Info("gRPC client is not available, returning mock data")
		// è¿”å›æ¨¡æ‹Ÿæ•°æ®
		roleNames := map[int]string{
			1: "ğŸ§™â€â™‚ï¸ æ™ºæ…§å¯¼å¸ˆ",
			2: "ğŸš€ ç§‘å¹»ä½œå®¶",
			3: "â¤ï¸ å¿ƒç†å’¨è¯¢å¸ˆ",
		}

		roleName := roleNames[roleId]
		if roleName == "" {
			roleName = "ğŸ§™â€â™‚ï¸ æ™ºæ…§å¯¼å¸ˆ" // é»˜è®¤è§’è‰²
		}

		// æ¨¡æ‹ŸAIå›å¤
		responses := map[string]string{
			"ğŸ§™â€â™‚ï¸ æ™ºæ…§å¯¼å¸ˆ": "ä½œä¸ºä¸€ä½æ™ºæ…§å¯¼å¸ˆï¼Œæˆ‘å¯¹ä½ çš„é—®é¢˜å¾ˆæ„Ÿå…´è¶£ã€‚åœ¨å†å²çš„é•¿æ²³ä¸­ï¼Œç±»ä¼¼çš„æ€è€ƒæ›¾å¯å‘äº†è®¸å¤šä¼Ÿå¤§çš„æ€æƒ³å®¶ã€‚æˆ‘è®¤ä¸º...",
			"ğŸš€ ç§‘å¹»ä½œå®¶":    "å“‡ï¼Œè¿™æ˜¯ä¸ªå¾ˆæœ‰è¶£çš„æƒ³æ³•ï¼åœ¨æˆ‘çš„æƒ³è±¡ä¸­ï¼Œæœªæ¥çš„ä¸–ç•Œå¯èƒ½ä¼šæ˜¯è¿™æ ·çš„...",
			"â¤ï¸ å¿ƒç†å’¨è¯¢å¸ˆ":  "æˆ‘ç†è§£ä½ çš„æ„Ÿå—ã€‚ä»å¿ƒç†å­¦çš„è§’åº¦æ¥çœ‹ï¼Œè¿™ç§æƒ…å†µå¯èƒ½åæ˜ äº†...",
		}

		response, exists := responses[roleName]
		if !exists {
			response = "ä½ å¥½ï¼Œæˆ‘æ˜¯AIåŠ©æ‰‹ï¼Œå¾ˆé«˜å…´ä¸ä½ äº¤æµï¼"
		}

		return response, nil
	}

	// è°ƒç”¨Python gRPCæœåŠ¡è¿›è¡Œå¯¹è¯ï¼ˆå‡è®¾è§’è‰²å·²é€šè¿‡ /roles/set ç«¯ç‚¹è®¾ç½®ï¼‰
	chatReq := &grpc.ChatRequest{
		Message: userMessage,
	}

	chatResp, err := l.svcCtx.GrpcClient.ChatWithRole(l.ctx, chatReq)
	if err != nil {
		logx.Errorf("Failed to call Python gRPC service: %v", err)
		return "", err
	}

	if !chatResp.Success {
		logx.Errorf("Python gRPC service returned error: %s", chatResp.Error)
		return "", err
	}

	return chatResp.Response, nil
}
